- Added all Nethrite variants
- Added all Nether Brick variants
- Added all Red Nether Brick variants
- Added all Obsidian variants
- Added all Prismarine variants
- Added all Prismarine Brick variants
_ Added all Dark Prismarine variants
- Added all Purpur variants
- Added all Quartz Brick variants
- Added all Terracotta variants
- Added all Tuff variants
- Added all Wool variants
_ Added all Terracotta Roof variants
- Added all Stained Tudor Variants
- Removed Tudor Plaster Colors (brown, ochre, tan) that just didn't look great.
- Added layered shapes to Tudor Blocks.
- Re-worked Recipe Generation to be more efficient and easier to maintain (this will allow for faster updates in the future, if you find missing recipes please let me know)
- Changed naming conventions for Tudor Blocks to match the rest of Caliber-Mod (This will break any existing Tudor Blocks in the world, sorry)
- Double-checked all English Translations (They are all included, if you would like to contribute other languages please join the discord server)
- Major Bugfix: fixed all block textures (blocks that had different top, bottom, sides were not generating correctly)
- BETA RELEASE IS COMING SOON!

-0.1.0
- BETA RELEASE
- While this is a beta release, it is still very much a work in progress.  The mod is stable with no known bugs at this point. There are still many blocks to add and some bugs may still exist.
- Added finishing touches on the recipe generation system (this will ensure that now recipes are missed in future updates)

-0.1.1 (in progress)
- Added a total of 10 new blocks!
- Current Mod Block Count is at 5,787
- Added Mossy Thatch Variants
- Added Mossy Slate Tile Variants
- Code Cleanup\
- Bugfix: fixed texture glitch on east face of 67 degree roof blocks
- Bugfix: fixed lighting on 67 degree roof blocks
- Bugfix: fixed Large Arch Block GUI rotation
- Bugfix: fixed Sandstone, Red Sandstone, Smooth Sandstone and Quartz Block Pickers showing Black Marble Variants






