@@ -1,5 +1,6 @@
 {
 	"credit": "Made by Charm8er for CaliberMC",
+	"parent": "caliber:block/templates/caliber_block_no_occlusion",
 	"ambientocclusion": false,
 	"textures": {
 		"particle": "#side"
@@ -25,9 +26,9 @@
 			"to": [2, 8, 16],
 			"rotation": {"angle": 0, "axis": "y", "origin": [0, 0, 8]},
 			"faces": {
-				"north": {"uv": [0, 8, 2, 10], "texture": "#side"},
+				"north": {"uv": [14, 8, 16, 10], "texture": "#side"},
 				"east": {"uv": [0, 14, 8, 16], "texture": "#side"},
-				"south": {"uv": [14, 8, 16, 10], "texture": "#side", "cullface": "south"},
+				"south": {"uv": [0, 8, 2, 10], "texture": "#side", "cullface": "south"},
 				"west": {"uv": [0, 8, 8, 10], "texture": "#side", "cullface": "west"},
 				"up": {"uv": [16, 8, 14, 0], "texture": "#side"},
 				"down": {"uv": [16, 0, 14, 8], "texture": "#side"}
@@ -39,9 +40,9 @@
 			"to": [16, 8, 16],
 			"rotation": {"angle": 0, "axis": "y", "origin": [0, 0, 8]},
 			"faces": {
-				"north": {"uv": [14, 8, 16, 10], "texture": "#side"},
-				"east": {"uv": [0, 8, 8, 10], "texture": "#side", "cullface": "east"},
-				"south": {"uv": [0, 8, 2, 10], "texture": "#side", "cullface": "south"},
+				"north": {"uv": [0, 8.25, 2, 10.25], "texture": "#side"},
+				"east": {"uv": [8, 8.25, 0, 10.25], "texture": "#side", "cullface": "east"},
+				"south": {"uv": [14, 8.25, 16, 10.25], "texture": "#side", "cullface": "south"},
 				"west": {"uv": [0, 14, 8, 16], "texture": "#side"},
 				"up": {"uv": [16, 8, 14, 0], "texture": "#side"},
 				"down": {"uv": [16, 0, 14, 8], "texture": "#side"}
@@ -50,7 +51,7 @@
 		{
 			"name": "ns1",
 			"from": [16, -1.98912, 7.59375],
-			"to": [18, 1.98912, 16.5],
+			"to": [18, 1.98912, 16.46875],
 			"rotation": {"angle": 22.5, "axis": "z", "origin": [8, 0, 16]},
 			"faces": {
 				"north": {"uv": [16, 12.02175, 14, 15.99999], "texture": "#side"},
@@ -64,7 +65,7 @@
 		{
 			"name": "ns2",
 			"from": [6.01088, 8, 7.5625],
-			"to": [9.98912, 10, 16.5],
+			"to": [9.98912, 10, 16.48438],
 			"rotation": {"angle": -45, "axis": "z", "origin": [8, 0, 16]},
 			"faces": {
 				"north": {"uv": [0.02175, 9, 3.99999, 11], "texture": "#side"},
@@ -120,7 +121,7 @@
 		{
 			"name": "ns6",
 			"from": [6.01088, 8, 7.5625],
-			"to": [9.98912, 10, 16.5],
+			"to": [9.98912, 10, 16.48438],
 			"rotation": {"angle": 45, "axis": "z", "origin": [8, 0, 16]},
 			"faces": {
 				"north": {"uv": [3.02175, 11.5, 6.99999, 13.5], "texture": "#side"},
@@ -134,7 +135,7 @@
 		{
 			"name": "ns7",
 			"from": [-2, -1.98912, 7.59375],
-			"to": [0, 1.98912, 16.5],
+			"to": [0, 1.98912, 16.46875],
 			"rotation": {"angle": -22.5, "axis": "z", "origin": [8, 0, 16]},
 			"faces": {
 				"north": {"uv": [14, 12.02175, 16, 15.99999], "texture": "#side"},
