@@ -48,7 +48,7 @@
 		{
 			"name": "5",
 			"from": [0, 12.81251, 7.5],
-			"to": [3.60937, 14.85938, 16.5],
+			"to": [3.60937, 13.00001, 16.5],
 			"rotation": {"angle": 0, "axis": "y", "origin": [8, 8.85938, 16]},
 			"faces": {
 				"north": {"uv": [3.60937, 0, 0, 2.04687], "texture": "#side"},
@@ -64,7 +64,6 @@
 			"from": [0, 12.81251, 7.48438],
 			"to": [3.60937, 15.35938, 9.48438],
 			"rotation": {"angle": -22.5, "axis": "x", "origin": [2, 12.85938, 7.5]},
-			"color": 0,
 			"faces": {
 				"north": {"uv": [3.60937, 0, 0, 2.54687], "texture": "#side"},
 				"east": {"uv": [2, 0, 0, 2.54687], "texture": "#side"},
@@ -79,7 +78,6 @@
 			"from": [0, 9.75001, 15.125],
 			"to": [3.60937, 12.29688, 17.125],
 			"rotation": {"angle": 22.5, "axis": "x", "origin": [2, 12.85938, 24.5]},
-			"color": 0,
 			"faces": {
 				"north": {"uv": [0, 0, 3.60937, 2.54687], "texture": "#side"},
 				"east": {"uv": [0, 0, 2, 2.54687], "texture": "#side"},
@@ -91,12 +89,12 @@
 		},
 		{
 			"name": "top",
-			"from": [0, 13.00001, 8],
+			"from": [-0.01, 13.00001, 8],
 			"to": [16, 16, 16],
 			"rotation": {"angle": 0, "axis": "y", "origin": [8, 8.85938, 16]},
 			"faces": {
-				"north": {"uv": [16, 0, 0, 3], "texture": "#side"},
-				"east": {"uv": [8, 0, 0, 3], "texture": "#side", "cullface": "east"},
+				"north": {"uv": [16, 0, 0, 2.99999], "texture": "#side"},
+				"east": {"uv": [16, 0, 8, 3], "texture": "#side", "cullface": "east"},
 				"south": {"uv": [16, 0, 0, 3], "texture": "#side", "cullface": "south"},
 				"west": {"uv": [8, 0, 0, 3], "texture": "#side", "cullface": "west"},
 				"up": {"uv": [0, 0, 16, 8], "texture": "#top", "cullface": "up"},
@@ -108,9 +106,9 @@
 			"to": [16, 13.00001, 16],
 			"rotation": {"angle": 0, "axis": "y", "origin": [8, 8.85938, 16]},
 			"faces": {
-				"north": {"uv": [16, 2, 8.0625, 4], "texture": "#side"},
-				"east": {"uv": [8, 0, 0, 2], "texture": "#side", "cullface": "east"},
-				"south": {"uv": [7.9375, 2, 0, 4], "texture": "#side", "cullface": "south"},
+				"north": {"uv": [16, 3, 8.0625, 5], "texture": "#side"},
+				"east": {"uv": [16, 3, 8, 5], "texture": "#side", "cullface": "east"},
+				"south": {"uv": [7.9375, 3, 0, 5], "texture": "#side", "cullface": "south"},
 				"west": {"uv": [8, 0, 0, 2], "texture": "#side"},
 				"up": {"uv": [7.9375, 0, 0, 8], "rotation": 180, "texture": "#side"},
 				"down": {"uv": [7.9375, 0, 0, 8], "rotation": 180, "texture": "#side"}
@@ -122,9 +120,9 @@
 			"to": [16, 11.00001, 16],
 			"rotation": {"angle": 0, "axis": "y", "origin": [8, 8.85938, 16]},
 			"faces": {
-				"north": {"uv": [16, 4, 14, 10.01563], "texture": "#side"},
-				"east": {"uv": [8, 0, 0, 6.01563], "texture": "#side", "cullface": "east"},
-				"south": {"uv": [2, 4, 0, 10.01563], "texture": "#side", "cullface": "south"},
+				"north": {"uv": [16, 5, 14, 11.01563], "texture": "#side"},
+				"east": {"uv": [16, 5, 8, 11.01563], "texture": "#side", "cullface": "east"},
+				"south": {"uv": [2, 5, 0, 11.01563], "texture": "#side", "cullface": "south"},
 				"west": {"uv": [8, 0, 0, 6.01563], "texture": "#side"},
 				"up": {"uv": [2, 0, 0, 8], "rotation": 180, "texture": "#side"},
 				"down": {"uv": [2, 0, 0, 8], "rotation": 180, "texture": "#side"}
@@ -136,9 +134,9 @@
 			"to": [14, 11.00001, 16],
 			"rotation": {"angle": 0, "axis": "y", "origin": [8, 8.85938, 16]},
 			"faces": {
-				"north": {"uv": [15.625, 5, 13, 7.76563], "texture": "#side"},
+				"north": {"uv": [13.96875, 5, 11.34375, 7.76563], "texture": "#side"},
 				"east": {"uv": [8, 0, 0, 2.76563], "texture": "#side"},
-				"south": {"uv": [5.625, 4, 3, 6.76563], "texture": "#side", "cullface": "south"},
+				"south": {"uv": [4.59375, 4.98438, 1.96875, 7.75001], "texture": "#side", "cullface": "south"},
 				"west": {"uv": [8, 0, 0, 2.76563], "texture": "#side"},
 				"up": {"uv": [2.625, 0, 0, 8], "rotation": 180, "texture": "#side"},
 				"down": {"uv": [2.625, 0, 0, 8], "rotation": 180, "texture": "#side"}
